Change the value of alt attribute of the images.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </li>
         <li>
           <a href="#social-media-footer"><img class="hidden-nav" src="images/nav/mail.png" width="55" height="55"
-              alt="social-media"></a>
+              alt="mail icon"></a>
         </li>
         <li>
-          <a><img class="hidden-img" src="images/nav/more.png" alt="More" width="55" height="55"></a>
+          <a><img class="hidden-img" src="images/nav/more.png" alt="Humburger icon" width="55" height="55"></a>
         </li>
       </ul>
     </nav>
@@ -46,15 +46,15 @@
 
     <ul class="social-media" id="headline-social-media">
       <li><a href="https://github.com/miltonHenschel"><img src="images/social-media-header/github.png"
-            alt="GitHub" /></a></li>
+            alt="GitHub icon" /></a></li>
       <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/social-media-header/linkedin.png"
-            alt="LinkedIn" /></a></li>
+            alt="LinkedIn icon" /></a></li>
       <li><a href="https://www.angellist.com/"><img src="images/social-media-header/angellist.png"
-            alt="Angel list" /></a></li>
+            alt="Angel list icon" /></a></li>
       <li><a href="https://twitter.com/nketchogue"><img src="images/social-media-header/twitter.png"
-            alt="Twitter" /></a></li>
+            alt="Twitter icon" /></a></li>
       <li><a href="https://medium.com/@nketchoguemilton"><img src="images/social-media-header/medium.png"
-            alt="Medium" /></a></li>
+            alt="Medium icon" /></a></li>
     </ul>
   </section>
 
@@ -70,7 +70,7 @@
     <div>
       <div id="flex-projects">
         <div class="center-img">
-          <img src="./images/projects/gymfit.png" alt="gymfit" />
+          <img src="./images/projects/gymfit.png" alt="gym fit image" />
         </div>
 
         <div id="projects-section-2">
@@ -211,7 +211,7 @@
     <section id="about-me-lang">
       <div>
         <div>
-          <img src="./images/bullets/diamond.png" alt="diamond" />
+          <img src="./images/bullets/diamond.png" alt="diamond bullet" />
           <h2>Languages</h2>
         </div>
         <ul>
@@ -224,7 +224,7 @@
 
       <div>
         <div>
-          <img src="./images/bullets/square.png" alt="square" />
+          <img src="./images/bullets/square.png" alt="square bullet" />
           <h2>Frameworks</h2>
         </div>
         <ul>
@@ -238,7 +238,7 @@
 
       <div>
         <div>
-          <img src="./images/bullets/disc.png" alt="square" />
+          <img src="./images/bullets/disc.png" alt="disc bullet" />
           <h2>Skills</h2>
         </div>
         <ul>
@@ -271,15 +271,15 @@
   <footer id="social-media-footer">
     <ul class="social-media" id="contact-social-form">
       <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img
-            src="images/social-media-footer/github.png" alt="Linkedin" /></a></li>
+            src="images/social-media-footer/github.png" alt="Github icon" /></a></li>
       <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img
-            src="images/social-media-footer/linkedin.png" alt="LinkedIn" /></a></li>
+            src="images/social-media-footer/linkedin.png" alt="LinkedIn icon" /></a></li>
       <li class="form-social-media"><a href="https://www.angellist.com/"><img
-            src="images/social-media-footer/angellist.png" alt="Angel list" /></a></li>
+            src="images/social-media-footer/angellist.png" alt="Angel list icon" /></a></li>
       <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img
-            src="images/social-media-footer/twitter.png" alt="Twitter" /></a></li>
+            src="images/social-media-footer/twitter.png" alt="Twitter icon" /></a></li>
       <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img
-            src="images/social-media-footer/medium.png" alt="Medium" /></a></li>
+            src="images/social-media-footer/medium.png" alt="Medium icon" /></a></li>
     </ul>
     <img id="social-media-footer-img" src="images/social-media-footer/line.png" alt="line">
   </footer>
