Fix mobile and desktop versions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- NAVBAR -->
   <header id="nav">
-    <a id="nav-first-a" href="#headline">Henschel</a>
+    <a id="nav-first-a" href="https://miltonhenschel.github.io/myPortfolio/">Henschel</a>
     <nav>
       <ul id="menu">
         <li>
@@ -38,7 +38,7 @@
   <!-- HEADLINE -->
   <section id="headline">
     <div>
-      <h1>Hey there! <br /> I’m Milton.</h1>
+      <h1>Hey there! <br /> I’m Henschel.</h1>
       <h2>I’am a Software Developer.</h2>
       <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like
         what you see and have a project you need coded, don’t hesitate to contact me.</p>
@@ -56,6 +56,7 @@
       <li><a href="https://medium.com/@nketchoguemilton"><img src="images/social-media-header/medium.png"
             alt="Medium icon" /></a></li>
     </ul>
+    <div id="headline-last-div"><p>NKETCHOGUE MPATCHIE Henschel</p></div>
   </section>
 
   <!-- PROJECTS -->
@@ -196,17 +197,20 @@
 
   <!-- ABOUT ME -->
   <section id="about-me">
-    <div id="about-me-div">
-      <h2>About me</h2>
+    <div id="about-me-main-content">
+      <div id="about-me-div">
+        <h2>About me</h2>
 
-      <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my
-        work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
-      </p>
+        <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my
+          work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
+        </p>
 
-      <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"
-        target="_blank"><button class="project-button">Get My Resume</button></a>
-      <hr />
+        <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"><button class="project-button">Get My Resume</button></a>
+      </div>
+      <div id="about-me-empty-div"><p>NKETCHOGUE</p></div>
     </div>
+
+    <div id="about-me-line-div"><img id="about-me-line" src="images/social-media-footer/mobile-line.png" alt="line"></div>
 
     <section id="about-me-lang">
       <div>
