Add scroll event to desktop navbar

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <nav aria-label="nav-bar">
       <ul id="menu">
         <li>
-          <a class="hidden-nav" href="#projects-title">Portfolio</a>
+          <a id="menu-portfolio" class="hidden-nav" href="#projects-title">Portfolio</a>
         </li>
         <li>
-          <a class="hidden-nav" href="#about-me-div">About</a>
+          <a id="menu-about" class="hidden-nav" href="#about-me-div">About</a>
         </li>
         <li>
-          <a class="hidden-nav" href="#form">Contact</a>
+          <a id="menu-contact" class="hidden-nav" href="#form">Contact</a>
         </li>
         <li>
           <a href="#social-media-footer"><img class="hidden-nav" src="images/nav/mail.png" alt="mail icon"></a>
