--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <img id="social-media-footer-img" src="images/social-media-footer/line.png" alt="line">
   </footer>
 
+  <!-- JAVASCRIPT  -->
   <script src="js/menu.js"></script>
   <script src="js/projects.js"></script>
 </body>
