Add red error email validation improved responsiveness

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <textarea name="message" id="message" maxlength="500" placeholder="Write a message" required></textarea>
       </div>
 
-      <p class="error-message">EMAIL IS INVALID</p>
+      <p class="error-message">*invalid email</p>
       <button id="form-button" class="button">Get in touch</button>
     </form>
   </section>
