--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Henschel's Portfolio</title>
   <link rel="stylesheet" href="css/mobile.css">
   <link rel="stylesheet" href="css/desktop.css">
-  <link rel="stylesheet" href="css/form.css">
 </head>
 
 <body>
+  <section id="main-section">
   <!-- NAVBAR -->
   <header id="nav" class="blurEffect">
     <a id="nav-first-a" href="https://miltonhenschel.github.io/myPortfolio/">Henschel</a>
@@ -35,7 +35,7 @@
     </nav>
 
     <nav id="dropdown-nav" aria-label="dropdown">
-      <a href="#"><img id="nav-close-btn" src="images/nav/close.png" alt="close icon"></a>
+      <div><img id="nav-close-btn" src="images/nav/close.png" alt="close icon"></div>
       <ul id="dropdown-menu">
         <li><a id="dropdown-menu-portfolio" class="dropdown-item" href="#projects-title">Portfolio</a></li>
         <li><a id="dropdown-menu-about" class="dropdown-item" href="#about-me-div">About</a></li>
@@ -66,6 +66,7 @@
             alt="Medium icon" /></a></li>
     </ul>
     <div id="headline-last-div"><p>NKETCHOGUE MPATCHIE Henschel</p></div>
+  </section>
   </section>
 
   <!-- PROJECTS -->
@@ -171,13 +172,14 @@
       <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img
             src="images/social-media-footer/medium.png" alt="Medium icon" /></a></li>
     </ul>
-    <img id="social-media-footer-img" src="images/social-media-footer/line.png" alt="line">
+    <div><img id="social-media-footer-img" src="images/social-media-footer/line.png" alt="line"></div>
+    <button id="myBtn" title="Go to top">Top</button>
   </footer>
 
   <!-- JAVASCRIPT  -->
   <script src="js/menu.js"></script>
   <script src="js/projects.js"></script>
-  <script src="js/form-validation.js"></script>
+  <script src="js/validation.js"></script>
 </body>
 
 </html>
